<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="8dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp">

        <TextView
            android:id="@+id/txtNombreMostrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="14dp"
            android:gravity="start"
            android:text="@string/nombre_completo"
            android:textSize="20sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txtTelefonoMostrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtNombreMostrar"
            android:layout_alignParentStart="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="20dp"
            android:text="@string/telefono"
            android:textSize="20sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txtFechaMostrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTelefonoMostrar"
            android:layout_alignParentStart="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:text="@string/fecha"
            android:textSize="20sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/editNombreCompleto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="14dp"
            android:layout_toEndOf="@+id/txtNombreMostrar"
            android:text="TextView"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/editTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editNombreCompleto"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/txtTelefonoMostrar"
            android:text="TextView"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/editFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTelefono"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/txtFechaMostrar"
            android:text="TextView"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/imgBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtFechaMostrar"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            app:srcCompat="@android:drawable/ic_menu_delete"
            android:layout_marginTop="20dp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imgUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtFechaMostrar"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="18dp"
            android:layout_toStartOf="@+id/imgBorrar"
            app:srcCompat="@android:drawable/ic_popup_sync"
            tools:ignore="ContentDescription" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>